stylesheets/index-style.css
    /* Defined Variable */
:root {
    --navy_color: rgba(25, 30, 41, 1);
    --green_color: rgba(1, 195, 141, 1);
    --white-color: rgba(245, 248, 255, 1);
    --sup-font: "Lato", sans-serif;
}








    /* General styling */
body {
    position: relative;
    margin: 0;
    padding: 0;
    font-family: var(--sup-font);
    color: var(--white-color);
    background-color: var(--navy_color);
    box-sizing: border-box;
}
.section {
    height: 100vh;
    width: 100%;
}
*, *::before, *::after {
    box-sizing: inherit;
}



    /* Navigation bar */
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 30px;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 15;
}
.nav-bar-logo {
    height: 40px;
}
.nav-menu {
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px 20px;
    border: 2px solid var(--white-color);
    border-radius: 10px;
    backdrop-filter: blur(3rem);
}
.nav-menu li {
    margin: 0 15px;
}
.nav-menu a {
    color: var(--white-color);
    text-decoration: none;
    font-size: 16px;
}
.nav-menu a:hover{
    color: var(--green_color);
}
.nav-bt {
    padding: 10px 20px;
    background-color: var(--green_color);
    color: var(--white-color);
    border: none;
    border-radius: 10px;
    cursor: pointer;
}






    /* Landing section */
.landing-section {
    background-color: #191E29;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
    overflow: hidden;
}
.landing-content {
    margin-top: 30vh;
}
.page-title {
    width: 60vw;
}
.page-tagline {
    font-size: 2vw;
}
.page-das-logo {
    width: 10vw;
}
.waves {
    position: relative;
    width: 130vw;
    height: 40vh;
    filter: blur(80px);
}
.parallax > use {
    animation: move-forever 50s cubic-bezier(.55,.5,.45,.5)     infinite;
}
.parallax > use:nth-child(1) {
    animation-delay: -4s;
    animation-duration: 7s;
}
.parallax > use:nth-child(2) {
    animation-delay: -3s;
    animation-duration: 10s;
}
.parallax > use:nth-child(3) {
    animation-delay: -4s;
    animation-duration: 13s;
}
.parallax > use:nth-child(4) {
    animation-delay: -7s;
    animation-duration: 20s;
}
@keyframes move-forever {
    0% {
        transform: translate3d(-90px,0,0);
    }
    100% { 
        transform: translate3d(85px,0,0);
    }
}












.who-we-are-section {
    background-color: burlywood;
}

.services-section {
    background-color: red;
}

.contact-us-section {
    background-color: blueviolet;
}





    /* border layout */
.top-border-layout {
    top: 0;
    position: fixed;
    z-index: 10;
    left: 0;
    right: 0;
    height: 80%;
    border-radius: calc(24 / 1440 * 100vw) calc(24 / 1440 * 100vw) 0 0;
    border: calc(8 / 1440 * 100vw) solid var(--white-color);
    border-bottom: none;
}
.top-border-layout::after {
    content: "";
    position: absolute;
    display: block;
    top: calc(-10 / 1440 * 100vw);
    bottom: calc(-10 / 1440 * 100vw);
    left: calc(-10 / 1440 * 100vw);
    right: calc(-10 / 1440 * 100vw);
    border: calc(10 / 1440 * 100vw) solid var(--white-color);
    border-bottom: none;
}
.bot-border-layout {
    bottom: 0;
    position: fixed;
    z-index: 10;
    left: 0;
    right: 0;
    height: 80%;
    border-radius: 0 0 calc(24 / 1440 * 100vw) calc(24 / 1440 * 100vw);
    border: calc(8 / 1440 * 100vw) solid var(--white-color);
    border-top: none;
}
.bot-border-layout::after {
    content: "";
    position: absolute;
    display: block;
    top: calc(-10 / 1440 * 100vw);
    bottom: calc(-10 / 1440 * 100vw);
    left: calc(-10 / 1440 * 100vw);
    right: calc(-10 / 1440 * 100vw);
    border: calc(10 / 1440 * 100vw) solid var(--white-color);
    border-top: none;
}

